# zachary

./: .gitignore  CycleGAN.ipynb  Experiment.ipynb  Feature extraction essentia.ipynb  Learning-Signal.ipynb  Learning.ipynb  Pitch detection librosa.ipynb  Untitled.ipynb  midi.ipynb  pix2pixBEGAN.ipynb  pyproject.toml
tests/: test_zachary.py
zachary/: audio_data.py  constants.py  datasets.py  feature_extraction.py  modules.py  plotting.py  sampling.py  transforms.py  utils.py  weight_initializers.py
zachary/model/: autoencoder.py  discriminator.py  generator.py  modules.py
zachary/preprocess/: base.py  datasets.py  feature_extraction.py  utils.py
