[tool.poetry]
name = "zachary"
version = "0.1.0"
description = ""
authors = ["kureta <kureta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = { path = "/home/kureta/Documents/other_repos/torch-1.0.0-cp37-cp37m-linux_x86_64.whl" }
torchvision = "^0.2.1"
librosa = "^0.6.2"
matplotlib = "^3.0"
pytorch-ignite = "^0.1.2"
torchbearer = "^0.2.6"
tensorboardx = "^1.5"
jupyterlab = "^0.35.4"
numpy = "^1.15"
wavelets_pytorch = {git = "https://github.com/tomrunia/PyTorchWavelets"}
livelossplot = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
