[tool.poetry]
name = "zachary"
version = "0.1.0"
description = ""
authors = ["kureta <kureta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = { git = "https://download.pytorch.org/whl/cu100/torch-1.0.1-cp37-cp37m-linux_x86_64.whl" }
torchvision = "^0.2.1"
librosa = "^0.6.2"
matplotlib = "^3.0"
pytorch-ignite = "^0.1.2"
torchbearer = "^0.2.6"
tensorboardx = "^1.5"
numpy = "^1.15"
wavelets_pytorch = {git = "https://github.com/tomrunia/PyTorchWavelets"}
livelossplot = "^0.2.2"
scipy = "^1.2"
ipykernel = "^5.1"
ipywidgets = "^7.4"
pywavelets = "^1.0"
statsmodels = "^0.9.0"
pandas = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
