[tool.poetry]
name = "zachary"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torchvision_nightly = "^0.2.1"
torch_nightly = {path = "/home/kureta/Downloads/torch_nightly-1.0.0.dev20190207-cp37-cp37m-linux_x86_64.whl"}
matplotlib = "^3.0"
scipy = "^1.2"
ipykernel = "^5.1"
ipywidgets = "^7.4"
autopep8 = "^1.4"
pyo = {git = "https://github.com/belangeo/pyo.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
